# onehint

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
datasets/: data.json  test.json
justone-compare/: main.py
justone_compare/: main.py
onehint/: main.py  utils.py
onehint/checkers/: base.py  v1.py  v2.py  v3.py  v4.py  v5.py  v6.py
onehint/statistics/: info.py  players_statistics.py
tests/: test_main.py  test_utils.py
tests/checkers/: test_v1.py  test_v2.py  test_v3.py
